2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobject.h (RG_DEF_CONVERSION), src/rbgcompat.h: used RG_
	prefix not G_ prefix.

	* src/rbgobject.c: made GOBJ2RVAL overridable for non-fundamental
	type.

	* src/global.h: merged to src/rbgprivate.h and removed.
	* src/: followed the above changes.

	* src/glib2.def, src/depend: followed the below changes.

	* src/rbgobj_fundamental.c, src/rbgobj_convert.c,
	src/rbgobj_value.c, src/rbgobject.[ch], src/rbgobj_type.c: renamed
	to rbgobj_convert_* from rbgobj_fund_*. The previous API is still
	available but need to rebuild.
	* src/rbgprivate.h, src/rbgcompat.h: added.

2007-11-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobject.[ch], src/rbgobj_fundamental.c: made RVAL2GOBJU
	customizable.

2007-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb: fixed build failure with top-level
	extconf.rb. Reported by andy. Thanks!

2007-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobject.c (rbgobj_ruby_object_from_instance2): don't use
	functions of Ruby for GTypeInstance.

	* src/rbglib_mainloop.c (ml_initialize): all arguments of
	GLib::MainLoop.new are optional.

2007-09-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb (create_makefile_at_srcdir): don't use TOPDIR.

2007-08-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_unicode.c (rbglib_m_unichar_get_script):
	G_TYPE_UNICODE_SCRIPT_TYPE -> G_TYPE_UNICODE_SCRIPT.

	* src/rbglib_maincontext.c (timeout_add_seconds): used
	g_timeout_add_seconds_full() not g_timeout_add_seconds().

	* src/lib/mkmf-gnome2.rb: cleanup.

2007-08-30  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* src/lib/mkmf-gnome2.rb: re-supported build in no-source
	directory.

2007-08-14  Vincent Isambart <vincent.isambart@gmail.com>
	* src/utils_int64.c: included rbglib.h instead of ruby.h
	because utils_int64.c uses the RVAL2CBOOL macro that is declared
	in rbglib.h and thus resulted in a dynamic link error on Mac