@@ -10,10 +10,20 @@
 
 G_BEGIN_DECLS
 
-typedef RGConvertTable RGFundamental;
+typedef struct {
+    GType type;
+    VALUE (*get_superclass)(void);
+    void (*type_init_hook)(VALUE);
+    void (*rvalue2gvalue)(VALUE val, GValue *result);
+    VALUE (*gvalue2rvalue)(const GValue *);
+    void (*initialize)(VALUE, gpointer);
+    gpointer (*robj2instance)(VALUE);
+    VALUE (*instance2robj)(gpointer);
+} RGFundamental;
 
-#define G_DEF_FUNDAMENTAL(f) RG_DEF_CONVERSION(f)
-#define rbgobj_fund_define_fundamental(f) rbgobj_convert_define(f)
+#define G_DEF_FUNDAMENTAL(f) (rbgobj_fund_define_fundamental(f))
+
+extern void rbgobj_fund_define_fundamental(RGFundamental *fundamental);
 
 G_END_DECLS
 
